# ip-tool-calculator

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cpp
cpack/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: ipv4.h  netip.h  subnet.h  utils.h
lib/src/: ipv4.cpp  netip.cpp  subnet.cpp  utils.cpp
src/: .gitignore  CMakeLists.txt  ipcalculator.cpp  ipcalculator.h  iptablemodel.cpp  iptablemodel.h  main.cpp
src/android/: AndroidManifest.xml  android_release.keystore
src/include/: utilities.h
src/languages/: fr_FR.ts
src/ui/: AboutDialog.qml  BasicScreen.qml  Main.qml  SettingDialog.qml  SubnetScreen.qml  advancedframe.cpp  advancedframe.h  advancedframe.ui  basicframe.cpp  basicframe.h  basicframe.ui  helpdialog.ui  iptablemodel.cpp  iptablemodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/ui/components/: AppDrawer.qml  SubnetFormComponent.qml
